<resources>
    <string name="app_name">건강한끼</string>

    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="find_pwd">비밀번호 찾기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="saveButton">저 장</string>
    <string name="photoButton">촬 영</string>

    <string name="foodName">식사명</string>

    <string name="gallery">앨 범</string>


</resources>