<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewFoodActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="310sp"
        android:layout_height="65dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/foodName"
        android:inputType="textNoSuggestions"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/photoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <Button
        android:id="@+id/photoButton"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/photoButton"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="500dp"
        android:layout_height="600dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="139dp"
        android:background="@drawable/button_shape"
        android:text="@string/saveButton"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoButton" />


</androidx.constraintlayout.widget.ConstraintLayout>